--- a/ApiGateway/DockerFile
+++ b/ApiGateway/DockerFile
@@ -1,6 +1,5 @@
 FROM python:3.10-slim
 
-
 WORKDIR /app
 
 
@@ -10,13 +9,10 @@ RUN apt-get update && apt-get install -y --no-install-recommends gcc libpq-dev \
 
 
 COPY requirements.txt /app/requirements.txt
-
-
-RUN pip install --no-cache-dir -r requirements.txt
+RUN pip install --no-cache-dir -r /app/requirements.txt
 
 
 COPY . /app
-
 
 RUN useradd -m appuser
 USER appuser
