--- a/MessengerService/DockerFile
+++ b/MessengerService/DockerFile
@@ -2,9 +2,15 @@ FROM python:3.10-slim
 
 WORKDIR /app
 
+
 RUN apt-get update && apt-get install -y --no-install-recommends gcc libpq-dev \
     && apt-get clean \
     && rm -rf /var/lib/apt/lists/*
+
+
+ENV VIRTUAL_ENV=/opt/venv
+RUN python -m venv $VIRTUAL_ENV
+ENV PATH="$VIRTUAL_ENV/bin:$PATH"
 
 COPY requirements.txt /app/requirements.txt
 
@@ -14,7 +20,5 @@ COPY . /app
 
 RUN useradd -m appuser
 USER appuser
-
-
 
 CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8002"]
